fix announce labels spacing

--- a/estate-complexes-redesign/css/announce.scss
+++ b/estate-complexes-redesign/css/announce.scss
@@ -279,8 +279,9 @@
     align-items: center;
     flex-wrap: wrap;
     color: $color-grey;
-    gap: 10px;
+    gap: 4px;
     margin: 0;
+    margin-top: 4px;
   }
 
   .object__status .label {
